--- a/templates/documento/index.html.twig
+++ b/templates/documento/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DocumentoController!{% endblock %}
+{% block title %}Documentos UNRaf{% endblock %}
 
 {% block body %}
 <style>
@@ -8,13 +8,22 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+{{ parent() }}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/Documentos/src/Controller/DocumentoController.php'|file_link(0) }}">src/Controller/DocumentoController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/Documentos/templates/documento/index.html.twig'|file_link(0) }}">templates/documento/index.html.twig</a></code></li>
-    </ul>
+<div>
+    {{ form_start(formulario, {'enctype':'multipart/form-data'})}}
+    
+    {{ form_end(formulario) }}
+</div>
+<div class="">
+    <a href="{{path('documentosObsoletos')}}">Documentos obsoletos</a>
+    {% for documento in documentos %}
+        <div>
+            <h2>{{documento.numero}}</h2>
+            <a href="{{ path('modificarDocumento', {'id': documento.id}) }}">Modificar</a>
+            <a href="{{ path('eliminarDocumento', {'id': documento.id}) }}">Eliminar</a>
+        </div>
+        
+    {% endfor %}
 </div>
 {% endblock %}
