Nuevas validaciones en documentos

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-md navbar-light">
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
             {# Este div es para dejar centrado Los botones #}
-            <a class="navbar-brand" href="{{path('documentos')}}">Home <b style="color:#4a8a91">Documentos</b></a>
+            <a class="navbar-brand" href="{{path('documentos')}}"><b style="color:#4a8a91">Home</b></a>
         </div>
         <div class="mx-auto order-0 ">
             <ul class="navbar-nav ml-auto">
