--- a/templates/documento/nuevoDocumento.html.twig
+++ b/templates/documento/nuevoDocumento.html.twig
@@ -5,8 +5,18 @@
 {% block body %}
 
 {{ parent() }}
-<div class="container ">
+<div style="" class="container ">
     {{ form_start(formulario, {'enctype':'multipart/form-data'})}}
+
+    <div style="margin-top: 20px;" class="form-group row">
+            <div class="col-sm-2 col-form-label">
+                <h5>Tipo documento:</h5>
+            </div>
+            <div class="col-sm-10">
+                {{ form_widget(formulario.documentoTipo, {attr: {class: 'form-control acortadoInput' , placeholder: 'Escriba el número del documento..'} }) }}  
+            </div>
+    </div>
+
     <div style="margin-top: 20px;" class="form-group row">
             <div class="col-sm-2 col-form-label">
                 <h5>Número:</h5>
@@ -30,16 +40,38 @@
             <h5>Fecha de publicación:</h5>
         </div>
         <div class="col-sm-10">
-            {{ form_widget(formulario.fechaPublicacion, {attr: {class: ' acortadoInput' , placeholder: 'Seleccione la fecha..'} }) }}  
+            <div class="row">
+                <div class="col-sm-2">
+                    {{ form_widget(formulario.fechaPublicacion.day, {attr: {class: 'form-control '} }) }}  
+                </div>
+                <div class="col-sm-3">
+                    {{ form_widget(formulario.fechaPublicacion.month, {attr: {class: 'form-control '} }) }}  
+                </div>
+                <div class="col-sm-3">
+                    {{ form_widget(formulario.fechaPublicacion.year, {attr: {class: 'form-control'} }) }}  
+                </div>
+                
+            </div>
         </div>
     </div>
-        
+
     <div style="margin-top: 20px;" class="form-group row">
         <div class="col-sm-2 col-form-label">
             <h5>Fecha de caducidad:</h5>
         </div>
         <div class="col-sm-10">
-            {{ form_widget(formulario.fechaCaducidad, {attr: {class: ' acortadoInput' , placeholder: 'Seleccione la fecha de caducidad..'} }) }}  
+            <div class="row">
+                <div class="col-sm-2">
+                    {{ form_widget(formulario.fechaCaducidad.day, {attr: {class: 'form-control '} }) }}  
+                </div>
+                <div class="col-sm-3">
+                    {{ form_widget(formulario.fechaCaducidad.month, {attr: {class: 'form-control '} }) }}  
+                </div>
+                <div class="col-sm-3">
+                    {{ form_widget(formulario.fechaCaducidad.year, {attr: {class: 'form-control'} }) }}  
+                </div>
+                
+            </div>
         </div>
     </div>
     
@@ -50,15 +82,6 @@
         <div class="col-sm-10">
             {{ form_widget(formulario.numeroVersion, {attr: {class: 'form-control acortadoInput' , placeholder: 'Escriba el número de version..'} }) }}  
         </div>
-    </div>
-        
-    <div style="margin-top: 20px;" class="form-group row">
-            <div class="col-sm-2 col-form-label">
-                <h5>Palabras cláves:</h5>
-            </div>
-            <div class="col-sm-10">
-                {{ form_widget(formulario.palabrasClaves, {attr: {class: 'form-control acortadoInput' , placeholder: 'Escriba palabras claves separadas por ;'} }) }}  
-            </div>
     </div>
     
     <div style="margin-top: 20px;" class="form-group row">
