--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,6 +47,21 @@
             </ul>
         </div>
         </nav>
+        {% for message in app.flashes('correcto') %}
+                <div id="notificacion" class="container alert alert-success">
+                    {{ message }}
+                </div>
+            {% endfor %}
+            {% for message in app.flashes('error') %}
+                <div id="notificacion" class="container alert alert-danger">
+                {{ message }}
+                </div>
+            {% endfor %}
+            {% for message in app.flashes('warning') %}
+                <div id="notificacion" class="container alert alert-warning">
+                {{ message }}
+                </div>
+        {% endfor %}
         {#<a class="float-right" style="text-align:right;" href="{{ path('documentosTipo')}}">Tipos de documentos</a>#}
                 
         
@@ -58,6 +73,7 @@
             {#<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>#}
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
             <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+            <script src="{{ asset("js/validacionDocumento.js") }}"></script>
             <script src="{{ asset("js/comportamientos.js") }}"></script>
             <script src="{{ asset("js/accionesDinamicas.js") }}"></script>
             <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.2/moment.min.js"></script>
