--- a/templates/documento/index.html.twig
+++ b/templates/documento/index.html.twig
@@ -54,10 +54,9 @@
                 <td>{{ documento.titulo }}</td>
                 <td>{{ documento.descripcion }}</td>
                 <td>
-                    <a class="btn btn-success" href="{{ asset('uploads/'~ documento.path) }}">{{ documento.path}}</a>
+                    <a class="btn btn-success" href="{{ path('verPDF', {'id': documento.id}) }}">Ver PDF</a>
                     <a class="btn btn-success" href="{{ path('modificarDocumento', {'id': documento.id}) }}">Modificar</a>
                     <a class="btn btn-danger" href="{{ path('eliminarDocumento', {'id': documento.id}) }}">Eliminar</a>
-                    
                 </td>
             </tr>
             {% endfor %}
