--- a/templates/documento/nuevoDocumento.html.twig
+++ b/templates/documento/nuevoDocumento.html.twig
@@ -6,6 +6,9 @@
 
 {{ parent() }}
 <div style="" class="container ">
+    <div class="container-fluid">
+        <h3>Documentos>>Nuevo documento</h3>
+    </div>
     {{ form_start(formulario, {'enctype':'multipart/form-data'})}}
 
     <div style="margin-top: 20px;" class="form-group row">
@@ -31,7 +34,7 @@
                 <h5>Año:</h5>
             </div>
             <div class="col-sm-10">
-                {{ form_widget(formulario.anio, {attr: {class: 'form-control acortadoInput' , placeholder: 'Escriba el año..'} }) }}  
+                {{ form_widget(formulario.anio, {attr: {onblur: 'verificarAnio(this)' , class: 'form-control acortadoInput' , placeholder: 'Escriba el año..'} }) }}  
             </div>
     </div>
             
