Validaciones, agregado de tipo de documentos, y bugs

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,7 @@
                     </a>
                     <div class="dropdown-menu itemMenu" aria-labelledby="navbarDropdownMenuLink">
                       <a class="formMenu dropdown-item" href="{{ path('nuevoDocumento') }}">Crear uno nuevo</a>
+                      <a class="formMenu dropdown-item" style="background-color:red;" href="{{ path('documentosTipo') }}">Tipos de documento</a>
                     </div>
                 </li>
                 
