--- a/templates/documento/nuevoDocumento.html.twig
+++ b/templates/documento/nuevoDocumento.html.twig
@@ -123,6 +123,16 @@
                 {{ form_widget(formulario.descripcion, {attr: {class: 'form-control acortadoInput' , placeholder: 'Escriba la descripción..'} }) }}  
             </div>
     </div>
+
+    <div style="margin-top: 20px;" class="form-group row">
+            <div class="col-sm-2 col-form-label">
+                <h5>Palabras claves:</h5>
+            </div>
+            <div class="col-sm-10">
+                {{ form_widget(formulario.palabraClave, {attr: {class: 'form-control acortadoInput' , placeholder: 'Seleccione o escriba las palabras'} }) }}  
+                <p style="color:grey;">Separar por ; cada palabra</p>
+            </div>
+    </div>
             
     <div style="margin-top: 20px;" class="form-group row">
             <div class="col-sm-2 col-form-label">
