--- a/public/css/estiloBase.css
+++ b/public/css/estiloBase.css
@@ -1,4 +1,3 @@
-
 #wrapper{
     padding:90px 15px;
 }
@@ -19,7 +18,6 @@
 @media(min-width:992px) {
 
     .leftmenutrigger{
-        display: block;
         display: block;
         margin: 7px 20px 4px 0;
         cursor: pointer;
@@ -42,7 +40,7 @@
         overflow-y:auto;
         bottom:0;
         overflow-x:hidden;
-        padding-bottom:40px
+        padding-bottom:40px;
     }
 }
 .animate{
