--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -1,3 +1,25 @@
+.botonAzul{
+    background-color:#306086;
+    color:white;
+}
+.divFormulario{
+    border-radius:0px;
+    -webkit-box-shadow: 5px 2px 14px -1px rgba(0,0,0,0.30);
+    -moz-box-shadow: 5px 2px 14px -1px rgba(0,0,0,0.30);
+    box-shadow: 5px 2px 14px -1px rgba(0,0,0,0.30);
+    color:#306086;
+    padding:20px;
+    
+    /*border-radius: 30px;*/
+
+}
+
+.bordeSombreado{
+    -webkit-box-shadow: 5px 2px 14px -1px rgba(0,0,0,0.30);
+    -moz-box-shadow: 5px 2px 14px -1px rgba(0,0,0,0.30);
+    box-shadow: 5px 2px 14px -1px rgba(0,0,0,0.30);
+}
+
 .ancho{
     width: 350px;
     
@@ -21,4 +43,5 @@
 .acortadoInput{
     width:600px;
 }
+
 
