--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,7 @@
                     {% if is_granted('ROLE_ADMIN') %}
                     <li id="menuDocumento" class="nav-item">
                         <a class="nav-link" href="#">
-                            <img src="{{ asset("img/documento.svg") }}" alt="Imagen documento">Documentos
+                            <img src="{{ asset("svg/documento.svg") }}" alt="Imagen documento">Documentos
                         </a>
                     </li>
                     <li id="documentoToggle" class="nav-item">
@@ -38,7 +38,7 @@
                     </li>
                     <li id="menuTipoDocumento" class="nav-item">
                         <a class="nav-link" href="#">
-                            <img src="{{ asset("img/documento.svg") }}" alt="Imagen documento">Tipo de documento
+                            <img src="{{ asset("svg/documento.svg") }}" alt="Imagen documento">Tipo de documento
                         </a>
                     </li>
                     <li id="tipoDocumentoToggle" class="nav-item">
@@ -46,26 +46,24 @@
                     </li>
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Documento</a>
+                        <a class="nav-link" style="background-color:#a3d8d0;" href="{{ path('backIntranet') }}"> Volver a intranet</a>
                     </li>
-                    <li class="nav-item">
-                    <a class="nav-link" style="background-color:#a3d8d0;" href="{{ path('backIntranet') }}"> Volver a intranet</a>
-                </li>
 
                 </ul>
+                {#
                 <ul class="navbar-nav ml-md-auto d-md-flex">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home
-                    <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Top Menu Items</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home
+                        <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Top Menu Items</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                </ul>#}
             </div>
         </nav>
 
