--- a/templates/documento/index.html.twig
+++ b/templates/documento/index.html.twig
@@ -26,7 +26,10 @@
 <br>
 <h4 style="text-align:center;">Resultados</h4>
 <br>
-
+<h6>-Bug pendientes:</h6>
+<h6>-Palabras claves, falta configurar bien.</h6>
+<h6>-Caso de uso OBSOLETO.</h6>
+<h6>-Caso de uso BUSQUEDA.</h6>
 <div class="container">
     <table class="table">
         <thead>
