--- a/templates/documento/nuevoDocumento.html.twig
+++ b/templates/documento/nuevoDocumento.html.twig
@@ -171,7 +171,7 @@
             </div>
 
             <div class="col-sm-6">
-            {{ form_widget(formulario.Aceptar, {attr: {class: 'ancho btn botonAzul'} }) }}  
+            {{ form_widget(formulario.Grabar, {attr: {class: 'ancho btn botonAzul'} }) }}  
             </div>
         </div>        
     </div>
