--- a/templates/documento/modificarDocumento.html.twig
+++ b/templates/documento/modificarDocumento.html.twig
@@ -46,7 +46,7 @@
                         <h5>Número:</h5>
                     </div>
                     <div class="col-sm-9">
-                        {{ form_widget(formulario.numero, {attr: {disabled: 'disabled',class: 'form-control' , placeholder: 'Escriba el número del documento..'} }) }}  
+                        {{ form_widget(formulario.numero, {attr: {readonly: 'readonly', class: 'form-control' , placeholder: 'Escriba el número del documento..'} }) }}  
                     </div>
             </div>
                     
@@ -55,7 +55,7 @@
                         <h5>Año:</h5>
                     </div>
                     <div class="col-sm-9">
-                        {{ form_widget(formulario.anio, {attr: {disabled: 'disabled',onblur: 'verificarAnio(this)' , class: 'form-control' , placeholder: 'Escriba el año..'} }) }}  
+                        {{ form_widget(formulario.anio, {attr: {readonly: 'readonly',onblur: 'verificarAnio(this)' , class: 'form-control' , placeholder: 'Escriba el año..'} }) }}  
                     </div>
             </div>
                     
@@ -132,7 +132,7 @@
                     <h5>Palabras claves:</h5>
                 </div>
                 <div class="col-sm-9">
-                    {{ form_widget(formulario.palabraClave, {attr: {value: '',onclick: 'vaciarPalabrasClaves(this)',class: 'form-control' , placeholder: 'Seleccione o escriba las palabras'} }) }}  
+                    {{ form_widget(formulario.palabraClave, {attr: {onclick: 'vaciarPalabrasClaves(this)',class: 'form-control' , placeholder: 'Seleccione o escriba las palabras'} }) }}  
                     <p style="color:grey;">Separar por ; cada palabra</p>
                 </div>
         </div>
@@ -144,6 +144,7 @@
                 </div>
                 <div class="col-sm-9">
                     {{ form_widget(formulario.path, {attr: {accept:'application/pdf,.doc,.docx',class: 'form-control'} })}}
+                    <p style="color:grey;">Si actualiza el PDF, se perderá el ya cargado.</p>
                 </div>
         </div>
         <hr>
@@ -171,7 +172,7 @@
             </div>
 
             <div class="col-sm-6">
-            {{ form_widget(formulario.Aceptar, {attr: {class: 'ancho btn botonAzul'} }) }}  
+            {{ form_widget(formulario.Modificar, {attr: {class: 'ancho btn botonAzul'} }) }}  
             </div>
         </div>        
     </div>
