Cambio en seleccionar, botones, y solo pDF

--- a/templates/documento_tipo/documentosTipo.html.twig
+++ b/templates/documento_tipo/documentosTipo.html.twig
@@ -19,12 +19,13 @@
     </div>
     
     {% for documento in documentos %}
+        {% if documento.nombre != 'Seleccionar' %}
         <div>
             <h2>{{documento.nombre}}</h2>
             <a href="{{ path('modificarDocumentoTipo', {'id': documento.id}) }}">Modificar</a>
             <a href="{{ path('eliminarDocumentoTipo', {'id': documento.id}) }}">Eliminar</a>
         </div>
-        
+        {% endif %}
     {% endfor %}
     
 </div>
