--- a/templates/documento/modificarDocumento.html.twig
+++ b/templates/documento/modificarDocumento.html.twig
@@ -143,7 +143,7 @@
                     <h5>Documento PDF:</h5>
                 </div>
                 <div class="col-sm-9">
-                    {{ form_widget(formulario.path, {attr: {accept:'application/pdf,.doc,.docx',class: 'form-control'} })}}
+                    {{ form_widget(formulario.path, {attr: {accept:'application/pdf',class: 'form-control'} })}}
                     <p style="color:grey;">Si actualiza el PDF, se perderá el ya cargado.</p>
                 </div>
         </div>
@@ -166,13 +166,13 @@
                     {{ form_widget(formulario.publico, {attr: {class: 'form-control'} }) }}  
                 </div>
         </div>
-        <div class="row center">
-            <div class="col-sm-6">
+        <div class="row" style="text-align:center;">
+            <div style="margin-bottom:5px;" class="col-sm-6">
                 <a href="#ventanaModal" data-toggle="modal" style="" class="btn btn-secondary ancho" >Cancelar</a>
             </div>
 
             <div class="col-sm-6">
-            {{ form_widget(formulario.Modificar, {attr: {class: 'ancho btn botonAzul'} }) }}  
+            {{ form_widget(formulario.Modificar, {attr: {class: 'ancho btn botonCeleste'} }) }}  
             </div>
         </div>        
     </div>
