--- a/templates/usuario/usuario.html.twig
+++ b/templates/usuario/usuario.html.twig
@@ -46,8 +46,9 @@
         <tr>
         <th scope="col">#</th>
         <th scope="col">Email</th>
+        <th scope="col">Permiso Docs</th>
         <th scope="col">Rol</th>
-        <th scope="col">Cambio de rol</th>
+        <th scope="col">-</th>
         </tr>
     </thead>
     {% set rolActualUser = "" %}
@@ -56,53 +57,13 @@
             <tr>
             <th scope="row">{{ loop.index }}</th>
             <td><h6 style="color:#0F9FA8">{{ usuario.email|replace({'@unraf.edu.ar': ''})}}</h6></td>
+            <td><h6 style="color:#0F9FA8">{{usuario.accesoDocumentos}}</h6></td>
             {% for rol in usuario.roles %}
             {% if loop.last %}
                 <td><p style="color:#2B2B2B">{{ rol|slice(5,rol|length)}}</p></td>
-                    {# Recorrer los roles del usuario actual.#}
-
-                    {% for rolUser in app.user.roles %}
-                        {% if loop.last %}
-                            {% set rolActualUser = rolUser %}
-                        {% endif %}
-                    {% endfor %}
-                    {# ... #}
-
-                    {% if rol=="ROLE_SUPERADMIN" %}
-                    <td>
-                        <a href="{{path('cambioLector', {'id': usuario.id})}}" class="btn botonCeleste">Lector</a>
-                        <a href="{{path('cambioEditor',{'id': usuario.id})}}" class="btn botonAzul">Editor</a>
-                        {% if rolActualUser == "ROLE_SUPERADMIN" %}
-                            <a href="{{path('cambioAdmin',{'id': usuario.id})}}" class="btn btn-primary">Admin</a>
-                        {% endif %}
-                    </td>
-                    {% elseif rol=="ROLE_ADMIN" %}
-                    <td>
-                        {% if rolActualUser == "ROLE_SUPERADMIN" %}
-                            <a href="{{path('cambioSuperadmin',{'id': usuario.id})}}" class="btn botonRosa">Superadmin</a>
-                        {% endif %}
-                        <a href="{{path('cambioLector', {'id': usuario.id})}}" class="btn botonCeleste">Lector</a>
-                        <a href="{{path('cambioEditor',{'id': usuario.id})}}" class="btn botonAzul">Editor</a>
-                    </td>
-                    {% elseif rol=="ROLE_EDITOR" %}
-                    <td>
-                        {% if rolActualUser == "ROLE_SUPERADMIN" %}
-                            <a href="{{path('cambioSuperadmin',{'id': usuario.id})}}" class="btn botonRosa">Superadmin</a>
-                            <a href="{{path('cambioAdmin',{'id': usuario.id})}}" class="btn btn-primary">Admin</a>
-                        {% endif %}
-                        <a href="{{path('cambioLector', {'id': usuario.id})}}" class="btn botonCeleste">Lector</a>
-                    </td>
-                    {% else %}
-                    <td>
-                        {% if rolActualUser == "ROLE_SUPERADMIN" %}
-                            <a href="{{path('cambioSuperadmin',{'id': usuario.id})}}" class="btn botonRosa">Superadmin</a>
-                            <a href="{{path('cambioAdmin',{'id': usuario.id})}}" class="btn btn-primary">Admin</a>
-                        {% endif %}
-                        <a href="{{path('cambioEditor',{'id': usuario.id})}}" class="btn botonAzul">Editor</a>
-                    </td>
-                    {% endif %}
-            {% endif %}  
+            {% endif %}
             {% endfor %}
+            <td><a href="{{path('modificarUser', {'id': usuario.id})}}" class="btn botonCeleste">Editar</a></td>
             </tr>
         </tbody>
     {% else %}
