--- a/templates/documento/index.html.twig
+++ b/templates/documento/index.html.twig
@@ -25,7 +25,7 @@
          {{ form_end(formulario) }}
 </div>
 <br>
-<div class="container bordeSombreado">
+<div class="container">
     {# Comienza tabla #}
     <table class="table table-responsive" style="margin:0 auto;">
         <thead>
