--- a/templates/documento/nuevoDocumento.html.twig
+++ b/templates/documento/nuevoDocumento.html.twig
@@ -30,7 +30,7 @@
     {{ form_start(formulario, {'enctype':'multipart/form-data'})}}
 
     {# Empieza formulario  #}
-    <div class="divFormulario container">
+    <div class="divFormulario bordeSombreado container">
     <h4 style="margin-top:10px;color:grey;">DATOS</h4>
         <div style="margin-top: 20px;" class="form-group row">
                 <div class="col-sm-3 col-form-label">
