--- a/templates/documento/index.html.twig
+++ b/templates/documento/index.html.twig
@@ -8,7 +8,10 @@
 {{ form_start(formulario, {'enctype':'multipart/form-data'})}}
 
 
-<div class="bordeSombreado espaciado degrade">
+<div class="bordeSombreado degrade divBuscar">
+    <div style="text-align:center;" class="container-fluid">
+        <h3 style="color:#306086">Busqueda</h3>
+    </div>
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
             Buscar
@@ -22,35 +25,44 @@
     <div class="center">
     {{ form_widget(formulario.Buscar, {attr: {class: 'btn botonCeleste ancho'} }) }}  
     </div>
-         {{ form_end(formulario) }}
+    {{ form_end(formulario) }}
+    <div style="text-align:center;">
+        <a href="{{path('documentos')}}"><img src="{{ asset("svg/plus-circle.svg") }}" width="30" alt="Busqueda Avanzada"></a>
+    </div>
 </div>
 <br>
 <div class="container">
+    <div style="text-align:center;" class="container-fluid">
+        <h3 style="color:#306086">Resultados</h3>
+    </div>
     {# Comienza tabla #}
-    <table class="table table-responsive" style="margin:0 auto;">
+    <div  style="max-width: 1200px;
+    overflow-x: scroll;">
+    <table class="table  table-hover"
         <thead>
           <tr style="background-color:#0F9FA8;color:white;text-align:center;">
-            <th scope="col">N° documento</th>
+            <th scope="col">Tipo</th>
+            <th scope="col">N°</th>
             <th scope="col">Año</th>
-            <th scope="col">Fecha publicación</th>
-            <th scope="col">Fecha caducidad</th>
+            <th scope="col">Fecha public</th>
             <th scope="col">Título</th>
-            <th scope="col">Descripción</th>
-            <th scope="col">Acciones</th>
+            <th scope="col">Acceso</th>
+            <th scope="col">PDF</th>
+            <th scope="col">-</th>
           </tr>
         </thead>
         <tbody>
             {% for documento in documentos %}
             {% if app.user.accesoDocumentos == documento.perfil or app.user.accesoDocumentos == "Confidencial" or (app.user.accesoDocumentos=="Restringido" and documento.perfil=="Público") %}
             <tr>
+                <td>{{ documento.documentoTipo.nombre }}</td>
                 <th scope="row">{{ documento.numero }}</th>
                 <td>{{ documento.anio }}</td>
-                <td>{{ documento.fechaPublicacion|date('d/m/Y h:m') }}</td>
-                <td>{{ documento.fechaCaducidad|date('d/m/Y h:m') }}</td>
+                <td>{{ documento.fechaPublicacion|date('d/m/Y') }}</td>
                 <td>{{ documento.titulo }}</td>
-                <td>{{ documento.descripcion }}</td>
+                <td>{{ documento.perfil }}</td>
+                <td><a class="btn btn-light" href="{{ path('verPDF', {'id': documento.id}) }}"><img src="{{ asset("svg/verPdf.svg") }}" class="svgMenu" alt="PDF">Ver</a></td>
                 <td>
-                    <a class="btn btn-light" href="{{ path('verPDF', {'id': documento.id}) }}"><img src="{{ asset("svg/verPdf.svg") }}" class="svgMenu" alt="PDF">Ver</a>
                     {% if documento.estado=="Alta" %}
                         <a class="btn btn-success" href="{{ path('modificarDocumento', {'id': documento.id}) }}"><img src="{{ asset("svg_pack/pencil.svg") }}" width="18" class="svgMenu" alt="Modificar"></a>
                         <a class="btn btn-danger" onclick="idObsoletear({{documento.id}})" data-toggle="modal" href="#ventanaModal"><img src="{{ asset("svg/trash.svg") }}" class="svgMenu" alt="Basura"></a>
@@ -92,6 +104,7 @@
             {% endfor %}
         </tbody>
     </table>
+    </div>
     
 </div>
 {% endblock %}
